--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -22,8 +22,8 @@
 
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-    width: 100%;
-    max-height: 680px;
+    width: auto;
+    height: 680px;
     margin: auto;
 }
 
