--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -1,60 +1,36 @@
-/*.carousel .item {
-    width: 100%; /!*slider width*!/
-    max-height: 700px; /!*slider height*!/
-}
-.carousel .item img {
-    width: 100%; /!*img width*!/
-}
-
-/!*add some makeup*!/
-.carousel .carousel-control {
-    background: none;
-    border: none;
-    top: 50%;
-}
-/!*full width container*!/
-@media (max-width: 767px) {
-    .block {
-        margin-left: -20px;
-        margin-right: -20px;
-    }
-}*/
-
 .carousel-inner > .item > img,
 .carousel-inner > .item > a > img {
-    width: auto;
+    width: 100%;
     height: 680px;
     margin: auto;
 }
-
-/*html,body {
-    height:100%;
-}
-.carousel,.item,.active {
-    height:100%;
-}
-.carousel-inner {
-    height:100%;
-}
-.fill {
-    width:100%;
-    max-height: 700px;
-    background-position:center;
-    background-size:cover;
+#tagline {
+    margin-left: 75px;
 }
 
-/!* faster sliding speed *!/
-.carousel-inner > .item {
-    -webkit-transition: 0.3s ease-in-out left;
-    -moz-transition: 0.3s ease-in-out left;
-    -o-transition: 0.3s ease-in-out left;
-    transition: 0.3s ease-in-out left;
+.carousel-caption {
+    color: black;
 }
 
-/!* keep full widget on smaller screens *!/
-@media (max-width: 767px) {
-    body {
-        padding-left: 0;
-        padding-right: 0;
-    }
+.carousel .slide {
+    background: #2d2d30;
+    color: #bdbdbd;
+}
+/*
+#quickies {
+    background-image: url("");
 }*/
+
+.bg-1 {
+    background: #2d2d30;
+    color: #bdbdbd;
+}
+.bg-1 h3 {
+    color: #fff;
+}
+.bg-1 p {
+    font-style: italic;
+}
+.thumbnail p, .thumbnail h3, .thumbnail h5{
+    color: #000;
+}
