--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -174,17 +174,121 @@ hr {
     background-color: #fff;
 }
 
-#title-left, #subtitle-left {
+#title-left {
     padding-left: 20px;
     border:0;
 }
 
-#title-right, #subtitle-right {
+#subtitle-left {
+    padding-left: 20px;
+    border:0;
+    color :#66CABE;
+}
+
+#title-right {
     border:0;
     float: right;
     padding-right: 30px;
 }
 
+#subtitle-right {
+    border:0;
+    float: right;
+    padding-right: 30px;
+    color: #66CABE;
+}
+
 #desc {
     border: 0;
+}
+
+#achievements {
+    font-size: 16px;
+}
+
+.achievement-wrapper {
+    color: #06A390;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: #fff;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.achievement-wrapper li {
+    padding-bottom: 10px;
+}
+
+#contactme {
+    font-size: 18px;
+}
+
+.list-unstyled {
+    padding-left: 0;
+    list-style: none;
+}
+.list-inline li {
+    display: inline-block;
+    padding-right: 5px;
+    padding-left: 5px;
+    margin-bottom: 10px;
+}
+
+.social-icons .fa {
+    font-size: 1.8em;
+}
+
+.social-icons .fa {
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: #FFF;
+    color: rgba(255, 255, 255, 0.8);
+    -webkit-transition: all 0.3s ease-in-out;
+    -moz-transition: all 0.3s ease-in-out;
+    -ms-transition: all 0.3s ease-in-out;
+    -o-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+}
+
+.social-icons.icon-circle .fa {
+    border-radius: 50%;
+}
+.social-icons .fa:hover, .social-icons .fa:active {
+    color: #FFF;
+    -webkit-box-shadow: 1px 1px 3px #333;
+    -moz-box-shadow: 1px 1px 3px #333;
+    box-shadow: 1px 1px 3px #333;
+}
+.social-icons.icon-zoom .fa:hover, .social-icons.icon-zoom .fa:active {
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+
+.social-icons .fa-facebook,.social-icons .fa-facebook-square{
+    background-color:#3C599F;
+}
+.social-icons .fa-github,.social-icons .fa-github-alt,.social-icons .fa-github-square{
+    background-color:#070709;
+}
+.social-icons .fa-instagram{
+    background-color:#A1755C;
+}
+.social-icons .fa-linkedin,.social-icons .fa-linkedin-square{
+    background-color:#0085AE;
+}
+.social-icons .fa-twitter,.social-icons .fa-twitter-square{
+    background-color:#32CCFE;
+}
+
+#footer {
+    text-align: center;
+}
+
+#copyright {
+    text-align: center;
 }
